--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css?family=Lato');
 @font-face{ 
 	font-family: 'Pusab';
 	src: url('PUSAB___-webfont[1].ttf')
@@ -24,4 +25,8 @@ img {
   margin-left: auto;
   margin-right: auto;
   width: 50%;
+}
+
+p {
+    font-family: Lato
 }
