--- a/stylesheet.css
+++ b/stylesheet.css
@@ -32,6 +32,22 @@ p {
     color: white;
 }
 
-a {
+/* unvisited link */
+a:link {
+  color: white;
+}
+
+/* visited link */
+a:visited {
+  color: white;
+}
+
+/* mouse over link */
+a:hover {
+  color: white;
+}
+
+/* selected link */
+a:active {
   color: white;
 }
