--- a/overhaul/other-shit/style.css
+++ b/overhaul/other-shit/style.css
@@ -8,3 +8,14 @@
 body {
   background-image: linear-gradient(#0065FD, #002E73);
 }
+
+h1 {
+   font-family: Pusab
+}
+#title{
+	color: white;
+	font-size: 40px;
+	-webkit-text-stroke-width: 1px;
+    -webkit-text-stroke-color: black;
+     text-shadow: 2px 4px 4px rgba(0,0,0,0.3);
+}
