--- a/overhaul/other-shit/style.css
+++ b/overhaul/other-shit/style.css
@@ -20,3 +20,8 @@ h1 {
     -webkit-text-stroke-color: black;
      text-shadow: 2px 4px 4px rgba(0,0,0,0.3);
 }
+
+p {
+    font-family: Lato;
+    color: white;
+}
