--- a/overhaul/other-shit/style.css
+++ b/overhaul/other-shit/style.css
@@ -26,6 +26,12 @@ p {
     color: white;
 }
 
+img {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
+
 .center {
 	text-align: center;
 }
