--- a/overhaul/other-shit/style.css
+++ b/overhaul/other-shit/style.css
@@ -3,7 +3,7 @@
 	font-family: 'Pusab';
 	src: url('https://marc92020.github.io/geometry-dash-scratch-directory/PUSAB___-webfont[1].ttf')
   /* above is temp until i move this over to the main site */
-	/* can github stop failing to publish my changes oh my god */
+	/* brah */
 }
 
 body {
